src/assets/css/style.css
/* CSS Custom Properties Definitions */

:root {
  /* WIDTH */
  --maxWidth-none: "none";
  --maxWidth-xs: 20rem;
  --maxWidth-sm: 24rem;
  --maxWidth-md: 28rem;
  --maxWidth-lg: 32rem;
  --maxWidth-xl: 36rem;
  --maxWidth-2xl: 42rem;
  --maxWidth-3xl: 48rem;
  --maxWidth-4xl: 56rem;
  --maxWidth-full: "100%";
  --maxWidth-wrapper: var(--maxWidth-2xl);
  /* SPACING */
  --spacing-px: "1px";
  --spacing-0: 0;
  --spacing-1: 0.25rem;
  --spacing-2: 0.5rem;
  --spacing-3: 0.75rem;
  --spacing-4: 1rem;
  --spacing-5: 1.25rem;
  --spacing-6: 1.5rem;
  --spacing-8: 2rem;
  --spacing-10: 2.5rem;
  --spacing-12: 3rem;
  --spacing-16: 4rem;
  --spacing-20: 5rem;
  --spacing-24: 6rem;
  --spacing-32: 8rem;
  /* FONT FAMILY */
  --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
    Times, serif;
  --font-body: var(--fontFamily-serif);
  --font-heading: var(--fontFamily-sans);
  /* WEIGHT */
  --fontWeight-normal: 400;
  --fontWeight-medium: 500;
  --fontWeight-semibold: 600;
  --fontWeight-bold: 700;
  --fontWeight-extrabold: 800;
  --fontWeight-black: 900;
  /* LINE HEIGHT */
  --lineHeight-none: 1;
  --lineHeight-tight: 1.1;
  --lineHeight-normal: 1.5;
  --lineHeight-relaxed: 1.625;
  /* 1.200 Minor Third Type Scale */
  --fontSize-root: 16px;
  --fontSize-0: 0.833rem;
  --fontSize-1: 1rem;
  --fontSize-2: 1.2rem;
  --fontSize-3: 1.44rem;
  --fontSize-4: 1.728rem;
  --fontSize-5: 2.074rem;
  --fontSize-6: 2.488rem;
  --fontSize-7: 2.986rem;
  /* THEME */
  --color-primary: #008b48;
  --color-primary-light: #22b771;
  --color-accent: #d1dce5;
  /* light theme */
  --main-background: #ffffff;
  --color-text: #2e353f;
  --color-text-light: #4f5969;
  /* dark theme*/
  --dark-main-background: #212529;
  --dark-color-text: #ffffff;
  --dark-color-text-light: #c7c7c7;
}

body {
  transition: all .5s;
}

.global-wrapper[data-theme="light"] {
  background: var(--main-background);
  color: var(--color-text);
}

.global-wrapper[data-theme="dark"] {
  background: var(--dark-main-background);
  color: var(--dark-color-text);
}

/* HTML elements */

html {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* TODO  do own font, color etc*/


/* Heading */

/* h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-heading);
} */

/* Custom classes */

/* .bio {
  display: flex;
  margin-bottom: var(--spacing-16);
}

.bio p {
  margin-bottom: var(--spacing-0);
}

.bio-avatar {
  margin-right: var(--spacing-4);
  margin-bottom: var(--spacing-0);
  min-width: 50px;
  border-radius: 100%;
} */

.contact-row {
  margin-bottom: var(--spacing-4);
}

.resume-button {
  border: 1px solid var(--color-primary-light);
  background-color: var(--color-primary);
  color: var(--color-accent);
  border-radius: var(--spacing-1);
  padding: .375rem .75rem;
  text-decoration: none;
}

.resume-button:hover {
  background-color: var(--color-primary-light);
  color: var(--color-accent);
}

